feat: implementa Academic System